[workspace]

members = ["client"]


[package]
name = "mad-code"
version = "0.1.0"
edition = "2021"

[dependencies]
mad-code-app = { path = "app" }

[build-dependencies]
mad-code-app = { path = "app" }
sails-rs = { version = "0.6.1", features = ["wasm-builder"] }
sails-idl-gen = "0.6.1"

[dev-dependencies]
mad-code = { path = ".", features = ["wasm-binary"] }
mad-code-client = { path = "client" }
sails-rs = { version = "0.6.1", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

[features]
wasm-binary = []
